--- a/generators/app/templates/project-ts/package.json.ejs
+++ b/generators/app/templates/project-ts/package.json.ejs
@@ -27,8 +27,12 @@
         "eslint-plugin-prettier": "^4.0.0",
         "husky": "^8.0.1",
         "lint-staged": "^12.4.1",
-        "nodemon": "^2.0.16"
-        "prettier": "^2.6.2"
+        "nodemon": "^2.0.16",
+        "prettier": "^2.6.2",
+        "tslib": "^2.4.0",
+        "ts-node": "^10.7.0",
+        "ts-node-dev": "^1.1.8",
+        "typescript": "^4.6.4"
     },
     "dependencies": {
 
