refactor: apply deps using project config deps function

--- a/generators/app/templates/project-ts/package.json.ejs
+++ b/generators/app/templates/project-ts/package.json.ejs
@@ -17,22 +17,30 @@
         "prepare": "husky install"
     },
     "devDependencies": {
-        "@commitlint/cli": "^16.2.3",
-        "@commitlint/config-conventional": "^16.2.1",
-        "cz-conventional-changelog": "3.3.0",
-        "eslint": "^8.15.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "husky": "^8.0.1",
-        "lint-staged": "^12.4.1",
-        "nodemon": "^2.0.16",
-        "prettier": "^2.6.2",
-        "tslib": "^2.4.0",
-        "ts-node": "^10.7.0",
-        "ts-node-dev": "^1.1.8",
-        "typescript": "^4.6.4"
+        <%- dep("@commitlint/cli") %>,
+        <%- dep("@commitlint/config-conventional") %>,
+        <%- dep("@types/eslint") %>,
+        <%- dep("@types/eslint-config-prettier") %>,
+        <%- dep("@types/eslint-plugin-prettier") %>,
+        <%- dep("@types/node") %>,
+        <%- dep("@types/nodemon") %>,
+        <%- dep("@types/prettier") %>,
+        <%- dep("@typescript-eslint/eslint-plugin") %>,
+        <%- dep("@typescript-eslint/parser") %>,
+        <%- dep("cz-conventional-changelog") %>,
+        <%- dep("eslint") %>,
+        <%- dep("eslint-config-airbnb-base") %>,
+        <%- dep("eslint-config-prettier") %>,
+        <%- dep("eslint-plugin-import") %>,
+        <%- dep("eslint-plugin-prettier") %>,
+        <%- dep("husky") %>,
+        <%- dep("lint-staged") %>,
+        <%- dep("nodemon") %>,
+        <%- dep("prettier") %>,
+        <%- dep("tslib") %>,
+        <%- dep("ts-node") %>,
+        <%- dep("ts-node-dev") %>,
+        <%- dep("typescript") %>,
     },
     "dependencies": {
 
