--- a/generators/app/templates/project-js/package.json.ejs
+++ b/generators/app/templates/project-js/package.json.ejs
@@ -17,20 +17,18 @@
         "prepare": "husky install"
     },
     "devDependencies": {
-        "@commitlint/cli": "^16.2.3",
-        "@commitlint/config-conventional": "^16.2.1",
-        "cz-conventional-changelog": "3.3.0",
-        "eslint": "^8.15.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "husky": "^8.0.1",
-        "lint-staged": "^12.4.1",
-        "nodemon": "^2.0.16",
-        "prettier": "^2.6.2"
+        <%- dep("@commitlint/cli") %>,
+        <%- dep("@commitlint/config-conventional") %>,
+        <%- dep("cz-conventional-changelog") %>,
+        <%- dep("eslint") %>,
+        <%- dep("eslint-config-airbnb-base") %>,
+        <%- dep("eslint-config-prettier") %>,
+        <%- dep("eslint-plugin-import") %>,
+        <%- dep("eslint-plugin-prettier") %>,
+        <%- dep("husky") %>,
+        <%- dep("lint-staged") %>,
+        <%- dep("nodemon") %>,
+        <%- dep("prettier") %>,
     },
-    "dependencies": {
-
-    }
+    "dependencies": {}
 }
