--- a/generators/app/templates/project-ts/package.json.ejs
+++ b/generators/app/templates/project-ts/package.json.ejs
@@ -4,7 +4,7 @@
     "description": <%- JSON.stringify(description) %>,
     "version": "0.0.0-development",
     "license": "MIT",
-    "main": "./src/index.js",
+    "main": "./src/index.ts",
     "engines": {
         "node": ">=14"
     },
