--- a/generators/app/templates/project-ts/package.json.ejs
+++ b/generators/app/templates/project-ts/package.json.ejs
@@ -9,7 +9,7 @@
         "node": ">=14"
     },
     "scripts": {
-        "start": "nodemon src/index.js",
+        "start": "nodemon",
         "lint": "eslint .",
         "lint:fix": "eslint --fix .",
         "pretty:fix": "prettier --write .",
