fix: remove dangling comma

--- a/generators/app/templates/project-js/package.json.ejs
+++ b/generators/app/templates/project-js/package.json.ejs
@@ -28,7 +28,7 @@
         <%- dep("husky") %>,
         <%- dep("lint-staged") %>,
         <%- dep("nodemon") %>,
-        <%- dep("prettier") %>,
+        <%- dep("prettier") %>
     },
     "dependencies": {}
 }
