--- a/generators/app/templates/project-ts/package.json.ejs
+++ b/generators/app/templates/project-ts/package.json.ejs
@@ -40,9 +40,7 @@
         <%- dep("tslib") %>,
         <%- dep("ts-node") %>,
         <%- dep("ts-node-dev") %>,
-        <%- dep("typescript") %>,
+        <%- dep("typescript") %>
     },
-    "dependencies": {
-
-    }
+    "dependencies": {}
 }
